메인화면 뷰 작성
header, tab layout, frame layout 작성 및 메인화면에 쓰이는 f-lab로고와 gray color 추가, tabitem text에 들어갈 string resource생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Android-Assignment</string>
+
+    <!-- 메인화면 -->
+    <string name="all_list">전체 리스트</string>
+    <string name="recent_read_list">최근 읽은 리스트</string>
 </resources>
